# HWiNFO-SteelSeries

./: .gitignore  Cargo.toml  README.md  hwinfo-steelseries.sln
.github/workflows/: release.yml
hwinfo-steelseries/: Program.cs  hwinfo-steelseries.csproj  hwisenssm2.cs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/: connect.rs  console_utils.rs  consts.rs  lib.rs  main.rs  settings.rs  steelseries.rs  utils.rs
