[package]
name = "hwinfo-steelseries-oled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
console = "0.15.7"
dialoguer = "0.11.0"
gamesense = "0.1.2"
rust-ini = "0.20.0"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
winapi = {version="0.3.9", features=["memoryapi", "winnt", "wincon", "winuser"]}
