[package]
name = "hwinfo-steelseries-oled"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
console = "0.15.8"
dialoguer = "0.11.0"
gamesense = "0.1.2"
rust-ini = "0.21.0"
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
tray-icon = "0.13.0"
winapi = {version="0.3.9", features=["memoryapi", "winnt", "wincon", "winuser"]}
