[package]
name = "hwinfo-steelseries-oled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamesense = "0.1.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
winapi = {version="0.3.9", features=["memoryapi", "winnt"]}
